change in misson part paragraph

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
      <section class="status-misson">
         <h2>My Misson on 2021</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur velit, qui, dicta consequatur minima voluptate optio, minus ipsa unde cum odit laborum laudantium dignissimos maxime veritatis nam repellat laboriosam consectetur quisquam. Delectus, harum ea quos repellat eius molestias quisquam. Eligendi iusto, praesentium ex consequuntur at animi earum molestiae veritatis beatae?</p>
+        <p>ipsum dolor sit amet consectetur adipisicing elit. Pariatur velit, qui, dicta consequatur minima voluptate optio, minus ipsa unde cum odit laborum laudantium dignissimos maxime veritatis nam repellat laboriosam consectetur quisquam. Delectus, harum ea quos repellat eius molestias quisquam. Eligendi iusto, praesentium ex consequuntur at animi earum molestiae veritatis beatae?</p>
     </section>
     <footer>
         <h1>Copyright By Tusar Ahmed</h1>
